--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.0",
   "browser_action": {
     "default_icon": "icons/icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "options.html"
   },
   "content_scripts": [
     {
@@ -14,6 +14,10 @@
       "run_at": "document_start"
     }
   ],
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
